5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1709_3063.log
== TEST (2019-05-02 10:02:57) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ")

-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:03:21) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper
print(a)
-- OUTPUT:
<built-in method upper of str object at 0x7f1d134ea5e0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:03:43) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
print(a)
-- OUTPUT:
INTEIRA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:09) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if (d <=0 or d >8):
	print("Entrada invalida")
elif ():
-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:16) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if (d <=0 or d >8):
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:27) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if (d <=0 or d >8):
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:37) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if (d <=0 or d >8):
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:50) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if (d <=0 or d >8):
	print("Entrada invalida")

-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:09:05) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= MALHA or a!= PLACA or a!= INTEIRA)):
	print("Entrada invalida")
elif ():
-- ERROR:
File "XXXX", line 7
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:09:16) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= MALHA or a!= PLACA or a!= INTEIRA)):
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((d <=0 or d >8) or (a!= MALHA or a!= PLACA or a!= INTEIRA)):
NameError: name 'MALHA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:09:55) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= malha or a!= placa or a!= inteira)):
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((d <=0 or d >8) or (a!= malha or a!= placa or a!= inteira)):
NameError: name 'malha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:10:44) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= malha or a!= placa or a!= inteira)):
	print("Entrada invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((d <=0 or d >8) or (a!= malha or a!= placa or a!= inteira)):
NameError: name 'malha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:13:08) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:13:41) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:16:59) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a=="INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:17:35) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a=="INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:18:38) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a=="INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:04) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a=="INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:16) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a=="INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:14) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:45) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) or (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:05) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:16) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:23) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:53) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if():

	
-- ERROR:
File "XXXX", line 9
    if():
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:58) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)


	
-- ERROR:
File "XXXX", line 9
    if():
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:24:37) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:25:03) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:25:19) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:27:38) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))
if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
elif (po < 50):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:35) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
elif (po < 50):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:29:48) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
elif ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:20) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
	
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
elif ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:15) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
	
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	if (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
	if ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
		print("PO insuficiente")
	


	
-- OUTPUT:
29
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:54) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
	
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	if (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
	if ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
		print("PO insuficiente")
	


	
-- OUTPUT:
29
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:46) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")	
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	if (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
	if ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
		print("PO insuficiente")
	


	
-- OUTPUT:
29
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:16) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")	
else:
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	if (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
		print(r)
	if ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
		print("PO insuficiente")
	


	
-- OUTPUT:
29
22
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:35:27) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")	
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)
elif ((po < 50) and (a== "MALHA" or a== "PLACA" or a== "INTEIRA")):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:50) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")	
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)
elif (po < 50 and (a== "MALHA" or a== "PLACA" or a== "INTEIRA"):
	print("PO insuficiente")
	


	
-- ERROR:
File "XXXX", line 16
    elif (po < 50 and (a== "MALHA" or a== "PLACA" or a== "INTEIRA"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:56) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")	
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)
elif (po < 50 and a== "MALHA" or a== "PLACA" or a== "INTEIRA"):
	print("PO insuficiente")
	


	
-- OUTPUT:
29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:41) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else: 
	if(po < 50 and a== "MALHA" or a=="PLACA" or a=="INTEIRA"):
		print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- ERROR:
File "XXXX", line 10
    elif (a == "INTEIRA" and po >= 200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:03) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else: 
	if(po < 50 and a== "MALHA" or a=="PLACA" or a=="INTEIRA"):
		print("PO insuficiente")
	elif (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	elif (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	elif (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
		print(r)

	


	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:14) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else: 
	if(po < 50 and a== "MALHA" or a=="PLACA" or a=="INTEIRA"):
		print("PO insuficiente")
	elif (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	elif (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	elif (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
		print(r)

	


	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:49) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
else: 
	if(po < 50 and a== "MALHA" or a=="PLACA" or a=="INTEIRA"):
		print("PO insuficiente")
	if (a == "INTEIRA" and po >= 200):
		r = (30 * d) - 20 
		print (r)
	if (a== "MALHA" and po >= 50 or po < 100):
		r = (15 * d) - 1
		print(r)
	if (a=="PLACA" and po >=100 or po < 200):
		r = (20 * d) - 18
		print(r)

	


	
-- OUTPUT:
PO insuficiente
29
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:40:42) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif(po < 50 and a== "MALHA" or a=="PLACA" or a=="INTEIRA"):
	print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:15) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif(po < 50 :
	print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- ERROR:
File "XXXX", line 7
    elif(po < 50 :
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:19) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif(po < 50) :
	print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:29) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif(po < 50) :
	print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:42:45) 
-- CODE:
po = int(input("A quantidade de pecas de ouro: "))
a = input("Nome da armadura (MALHA, PLACA ou INTEIRA): ").upper()
d = int(input("Fator de destreza: "))

if ((d <=0 or d >8) and (a!= "MALHA" or a!= "PLACA" or a!= "INTEIRA")):
	print("Entrada invalida")
elif(po < 50) :
	print("PO insuficiente")
elif (a == "INTEIRA" and po >= 200):
	r = (30 * d) - 20 
	print (r)
elif (a== "MALHA" and po >= 50 or po < 100):
	r = (15 * d) - 1
	print(r)
elif (a=="PLACA" and po >=100 or po < 200):
	r = (20 * d) - 18
	print(r)

	


	
-- EXECUTION TIME:
0.175198
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
